# bun2nix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  default.nix  flake.nix  rinja.toml
.github/: FUNDING.md  FUNDING.yml
.github/workflows/: deploy-docs.yml  gh-pages.yml  npm-packages-publish.yml
.sqlx/: query-b91b654d5eb9ad377360f391a796d471ae4d4b992882140714785325fa3b3898.json  query-fcff2676e94fbb833fab33d5ab3025f4f8ee1d6b4dbb91a5c33e115e05525110.json
docs/: book.toml
docs/src/: SUMMARY.md  building-packages.md  bun2nix.md  flake-installation.md  head.html  installation.md  overlay.md  template-installation.md  using-the-command-line-tool.md  v2-update-guide.md
examples/: README.md
examples/bunx-binary/: README.md  bun.nix  default.nix  flake.nix  package.json
examples/conflicting-deps/: README.md  bun.nix  default.nix  flake.nix  index.ts  package.json
examples/minimal/: README.md  bun.nix  default.nix  flake.nix  package.json
examples/react/: README.md  (+3 more)
migrations/: 20250309212815_Create_Package_Cache.up.sql
nix/: bun2nix.nix  cache-entry-creator.nix  deprecations.nix  devshell.nix  docs.nix  fetch-bun-deps.nix  formatter.nix  mk-derivation.nix  overlay.nix  package.nix  write-bun-application.nix
src/: README.md  cache.rs  error.rs  lib.rs  lockfile.rs  main.rs  nix_expression.rs  package.rs  prefetch.rs
templates/: README.md  fetchurl.nix_template  output.nix  output.nix_template
test-workspace/: bun.nix  default.nix  package.json
tests/: binary_lockfile.rs  minimal_lockfile.rs  prefetch.rs  react_lockfile.rs  workspace_lockfile.rs
(+136 files in other folders)
