[dependencies]
sqlx = {version = "0.8.3", features = ["migrate", "runtime-tokio", "sqlite"]}
clap = {version = "4.5.31", features = ["derive", "string"]}
jsonc-parser = {version = "0.26.2", features = ["serde"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
thiserror = "2.0.11"
futures = "0.3.31"
tokio = {version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"]}
async-process = "2.3.0"
itertools = "0.14.0"
rayon = "1.10.0"
dirs = "6.0.0"
rinja = "0.3.5"

[package]
name = "bun2nix"
version = "1.3.1"
edition = "2021"
