[dependencies]
clap = {version = "4.5.31", features = ["derive", "string"]}
jsonc-parser = {version = "0.26.2", features = ["serde"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
thiserror = "2.0.11"
itertools = "0.14.0"
rinja = "0.3.5"

[package]
name = "bun2nix"
version = "1.5.2"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
