[dependencies]
clap = {version = "4.5.31", features = ["derive", "string"]}
jsonc-parser = {version = "0.26.2", features = ["serde"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
thiserror = "2.0.11"
itertools = "0.14.0"
askama = "0.14.0"
wyhash = "0.6.0"

[package]
name = "bun2nix"
version = "1.5.2"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
